Completed QA checks and fixed work section content alignments

--- a/css/style.css
+++ b/css/style.css
@@ -360,8 +360,13 @@ footer .social-icons li i {
     margin-inline-start: 40px;
     margin-inline-end: 40px;
   }
+  h2 {
+    margin-top: 80px;
+  }
   header {
     text-align: center;
+    padding-top: 60px;
+    padding-bottom: 80px;
   }
   header .content-wrapper {
     display: flex;
@@ -386,6 +391,14 @@ footer .social-icons li i {
     margin-bottom: 20px;  
     text-transform: uppercase;
   }
+  .home-title {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+  }
+  .home-title h2 {
+    max-width: 80%;
+  }
 
   /* -- Work Style -- */
   #work {
@@ -394,6 +407,7 @@ footer .social-icons li i {
     text-align: center;
     flex-flow: row wrap;
     width: 100%;
+    padding-top: 80px;
   
   }
   .portfolio-wrapper {
@@ -407,9 +421,29 @@ footer .social-icons li i {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    width: 45%;
+  }
+  .portfolio-header {
+    margin: 0 0 60px 0;
+  }
+
+  .project-description {
+    width: 95%;
+    margin: 0 0 30px 0;
+  }
+
+  .project-link {
+    margin: 40px 0 60px 0;
+  }
+  .skill,
+  .tool {
+    width: 45%;
   }
 
   /* -- Skills Styles -- */
+  #skills {
+    padding-top: 80px;
+  }
   #skills h4 {
     margin: 40px 0 20px 0;
   }
@@ -446,12 +480,18 @@ footer .social-icons li i {
   }
   .about-info h4 {
     text-align: left;
+    
   }
 
 
   /* -- Footer Styles -- */
+  footer {
+    padding-bottom: 80px;
+  }
+
   footer .contact-info {
     width: 33%;
+    
   }
   footer .follow-section {
     display: flex;
@@ -511,11 +551,7 @@ footer .social-icons li i {
   .home-title {
     max-width: 95%;
   }
-  .home-title {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-  }
+ 
   .home-title h2 {
     max-width: 70%;
   }
@@ -530,10 +566,15 @@ footer .social-icons li i {
     width: 100%;
     padding-top: 80px;
   }
+  .portfolio-header {
+    margin: 0 0 60px 0;
+  }
   .home-portfolio-piece {
     width: 30%;
   }
+ 
   .project-link {
+    font-size: 1rem;
     margin: 40px 0 80px 0;
   }
   .project-description {
@@ -562,6 +603,10 @@ footer .social-icons li i {
   }
 
   /* -- About Me Styles -- */
+  #about {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
   .about-content-wrapper {
     display: flex;
     justify-content: space-between;
@@ -579,13 +624,12 @@ footer .social-icons li i {
 
   #about figure {
     width: 35%;
-    margin-top: 0;
+    margin-top: 10px;
   }
   .about-info {
     width: 58%;
   }
   .about-info h3 {
-    font-size: 3.4rem;
     text-align: left;
     margin: 0;
   }
